--- a/src/css/base/datepicker.css
+++ b/src/css/base/datepicker.css
@@ -5,7 +5,6 @@
 } */
 
 .el-input__wrapper {
-    border: 1px solid #afafaf;
     border-radius: 2.5px;
     box-shadow: none !important;
     background: #fff url('../../assets/icon/icon-date.png') no-repeat ;
@@ -15,19 +14,20 @@
 }
 
 .el-input__wrapper:hover {
-    border:1px solid #53bad5 !important;
+    border:1px solid #53bad5;
 }
 
 .el-input__wrapper:focus {
-    border:1px solid #6fc6dc !important;
+    border:1px solid #6fc6dc;
 }
 
 .el-input__wrapper:active {
-    border:1px solid #c3c3c3 !important;
+    border:1px solid #c3c3c3;
 }
 
 .el-input__prefix-inner {
     display: none !important;
+   
 }
 
 .el-input__suffix-inner {
@@ -38,8 +38,14 @@
     color: #000 !important;
 }
 
-.date-picker {
+.el-date-editor.el-input {
+    border: 1px solid #afafaf;
     width: 100% !important;
     height: 100%  !important;
-    color: #000 !important;
+    border-radius: 2.5px;
+    box-sizing: border-box;
+}
+
+.font-misa {
+    font-family: url('../../assets/font/roboto/Roboto-Regular.ttf');
 }
