--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -63,6 +63,10 @@
     margin-left: -20px;
 }
 
+.ml-24 {
+    margin-left: 24px;
+}
+
 .ml--44 {
     margin-left: -44px;
 }
@@ -89,6 +93,10 @@
 
 .mb-20 {
     margin-bottom: 20px;
+}
+
+.mb-24 {
+    margin-bottom: 24px;
 }
 
 .width-100 {
