--- a/src/css/base/table.css
+++ b/src/css/base/table.css
@@ -11,13 +11,15 @@
     box-sizing: border-box;
     position: relative;
     width: 100%;
-    height: 300px;
+    height: 100%;
 }
 
 .table tbody {
     width: 100%;
-    height: 550px;
+    height: 0;
+    max-height: 100%;
     overflow-y: scroll;
+    outline: none;
 }
 
 table thead {
@@ -37,6 +39,12 @@ table thead {
 
 .table tr:hover {
     background-color: #d1edf4;
+}
+
+.table tr:focus {
+    background-color: #d1edf4;
+    outline: none;
+
 }
 
 .table th {
@@ -96,6 +104,7 @@ table thead {
     margin: 0;
     padding: 0;
     cursor: pointer;
+    outline: none;
 }
 
 
@@ -153,4 +162,13 @@ table thead {
 
 .isSelectRow {
     background-color: #d1edf4;
+}
+
+.focusRowOnClick {
+    background-color: #d1edf4;
+}
+
+.btn_keydown {
+    opacity: 0;
+    position: absolute;
 }
